app/assets/stylesheets/print.css.scss
// Place all the styles related to the print controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

ol.printer-list {
  list-style-type: none;
  margin-left: 0;
  li {
    &:not(:first-child):before {
      content: "— ";
    }
    display: inline-block;
  }
}

.suggestions {
  margin-top: 2em;
}

.chosen-container-single .chosen-single {
  position: relative;
  display: block;
  overflow: hidden;
  padding: 8px 0 8px 8px;
  height: 42px;
  border: 1px solid #aaa;
  border-radius: 0;
  background: #fff;
  font-size: 1rem;
  font-family: inherit;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  color: #444;
  text-decoration: none;
  white-space: nowrap;
  line-height: 24px;
}

.chosen-container-active.chosen-with-drop .chosen-single {
  box-shadow: inherit;
  background-image: inherit;
}

.chosen-container .chosen-results li.highlighted {
  background: #008cba;
}

.chosen-container-single .chosen-single div b {
  background: url(/assets/chosen-sprite.png) no-repeat 0px 10px;
  width: 10px;
}
.chosen-container-active.chosen-with-drop .chosen-single div b {
  background-position: -18px 10px;
}

#pq {
  .hidden {
    display: none;
  }
}

